fixed comp title alignment on job card, added background image

--- a/src/JobCard.css
+++ b/src/JobCard.css
@@ -17,3 +17,8 @@
   font-size: small;
   text-align: left;
 }
+
+.JobCard-companyName {
+  text-align: left;
+  font-size: small;
+}
